- LWJGL3: Fix pauseWhenLostFocus not working as expected
- LWJGL 3: Downgrade to 3.3.3 due to AV false positives on 3.3.4 and OpenAL log spamming issue on 3.3.5.
- API Addition: Added FPSLogger#setBound
- Android: Fix crash on startup if `setContentView` was manually called after `initializeForView`
- API Addition: Added Array#replaceFirst and Array#replaceAll
- API Addition: Added ByteArray#replaceFirst and ByteArray#replaceAll
- API Addition: Added CharArray#replaceFirst and CharArray#replaceAll
- API Addition: Added DelayedRemovalArray#replaceFirst and DelayedRemovalArray#replaceAll
- API Addition: Added FloatArray#replaceFirst and FloatArray#replaceAll
- API Addition: Added IntArray#replaceFirst and IntArray#replaceAll
- API Addition: Added LongArray#replaceFirst and LongArray#replaceAll
- API Addition: Added ShortArray#replaceFirst and ShortArray#replaceAll
- API Addition: Added SnapshotArray#replaceFirst and SnapshotArray#replaceAll

[1.13.0]
- [BREAKING CHANGE] GWT: Updated to 2.11.0. `com.google.jsinterop:jsinterop-annotations:2.0.2:sources` must be added as a dependency to your html project dependencies.
- [BREAKING CHANGE] Android: Minimum API level is now level 19 (Android 4.4)
- [BREAKING CHANGE] iOS: Increased min supported iOS version to 12.0. Update your Info.plist file if necessary.
- [BREAKING CHANGE] Android, iOS: Exceptions occurring in Runnable tasks scheduled through Gdx.app.postRunnable() are no longer swallowed and will crash the app (add a protection if required).
- Updated: Update to jnigen 2.5.2
- iOS: Update to MobiVM 2.3.21
- iOS: The iOS backend now implements AudioDevice. It can be configured through IOSApplicationConfiguration with audioDeviceBufferSize/audioDeviceBufferCount
- Fixed GlyphLayout for fixed width glyph offsets at the start and end of lines.
- Fixed scene2d.ui layout for fractional positions and sizes.
- LWJGL3: Added pauseWhenMinimized and pauseWhenLostFocus flags to Lwjgl3ApplicationConfiguration.